Polished Up the styling

--- a/index.html
+++ b/index.html
@@ -5,30 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="script.js"></script>
     <title>Link CSS to HTML</title>
   </head>
   <body>
+    <h1>Odiso's Calculator</h1>
     <div class="calculator-container">
-      <button class="calc-button">Ac</button>
-      <button class="calc-button">X</button>
-      <button class="calc-button">/</button>
-      <button class="calc-button">*</button>
-      <button class="calc-button">7</button>
-      <button class="calc-button">8</button>
-      <button class="calc-button">9</button>
-      <button class="calc-button">-</button>
-      <button class="calc-button">4</button>
-      <button class="calc-button">5</button>
-      <button class="calc-button">6</button>
-      <button class="calc-button">+</button>
-      <button class="calc-button">1</button>
-      <button class="calc-button">2</button>
-      <button class="calc-button">3</button>
-      <button class="calc-button">=</button>
-      <button class="calc-button">0</button>
-      <button class="calc-button">.</button>
-      <button class="calc-button">=</button>
+      <div class="calculate-container">
+        <div class="equation-contanier">6000/2+3322*2</div>
+        <div class="answer-container">=123456</div>
+      </div>
+      <div class="calcButtons-container">
+        <button class="calc-button">Ac</button>
+        <button class="calc-button">X</button>
+        <button class="calc-button" id="operands-buttons">/</button>
+        <button class="calc-button" id="operands-buttons">*</button>
+        <button class="calc-button">7</button>
+        <button class="calc-button">8</button>
+        <button class="calc-button">9</button>
+        <button class="calc-button" id="operands-buttons">-</button>
+        <button class="calc-button">4</button>
+        <button class="calc-button">5</button>
+        <button class="calc-button">6</button>
+        <button class="calc-button" id="operands-buttons">+</button>
+        <button class="calc-button">1</button>
+        <button class="calc-button">2</button>
+        <button class="calc-button">3</button>
+        <button class="calc-button " id="equals-button">=</button>
+        <button class="calc-button">0</button>
+        <button class="calc-button">.</button>
+      </div>
     </div>
   </body>
 </html>
