--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Link CSS to HTML</title>
   </head>
   <body>
@@ -20,7 +20,7 @@
         <div class="answer-container">=123456</div>
       </div>
       <div class="calcButtons-container">
-        <button class="calc-button">Ac</button>
+        <button class="calcs-button" onclick="appendNumber()">Ac</button>
         <button class="calc-button">X</button>
         <button class="calc-button" id="operands-buttons">/</button>
         <button class="calc-button" id="operands-buttons">*</button>
