Added Script Logic

--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <h1>Odiso's Calculator</h1>
     <div class="calculator-container">
       <div class="calculate-container">
-        <div class="equation-contanier">6000/2+3322*2</div>
-        <div class="answer-container">=123456</div>
+        <div class="equation-contanier"></div>
+        <div class="answer-container">Ans</div>
       </div>
       <div class="calcButtons-container">
-        <button class="calcs-button" onclick="appendNumber()">Ac</button>
-        <button class="calc-button">X</button>
-        <button class="calc-button" id="operands-buttons">/</button>
-        <button class="calc-button" id="operands-buttons">*</button>
-        <button class="calc-button">7</button>
-        <button class="calc-button">8</button>
-        <button class="calc-button">9</button>
-        <button class="calc-button" id="operands-buttons">-</button>
-        <button class="calc-button">4</button>
-        <button class="calc-button">5</button>
-        <button class="calc-button">6</button>
-        <button class="calc-button" id="operands-buttons">+</button>
-        <button class="calc-button">1</button>
-        <button class="calc-button">2</button>
-        <button class="calc-button">3</button>
+        <button class="calc-button" onclick="hoverGrid()">Ac</button>
+        <button class="calc-button" onclick="hoverGrid()">X</button>
+        <button class="calc-button" onclick="hoverGrid()" id="operands-buttons">/</button>
+        <button class="calc-button" onclick="hoverGrid()" id="operands-buttons">*</button>
+        <button class="calc-button" onclick="hoverGrid()">7</button>
+        <button class="calc-button" onclick="hoverGrid()">8</button>
+        <button class="calc-button" onclick="hoverGrid()">9</button>
+        <button class="calc-button" onclick="hoverGrid()" id="operands-buttons">-</button>
+        <button class="calc-button" onclick="hoverGrid()">4</button>
+        <button class="calc-button" onclick="hoverGrid()">5</button>
+        <button class="calc-button" onclick="hoverGrid()">6</button>
+        <button class="calc-button" onclick="hoverGrid()" id="operands-buttons">+</button>
+        <button class="calc-button" onclick="hoverGrid()">1</button>
+        <button class="calc-button" onclick="hoverGrid()">2</button>
+        <button class="calc-button" onclick="hoverGrid()">3</button>
         <button class="calc-button " id="equals-button">=</button>
-        <button class="calc-button">0</button>
-        <button class="calc-button">.</button>
+        <button class="calc-button" onclick="hoverGrid()">0</button>
+        <button class="calc-button" onclick="hoverGrid()">.</button>
       </div>
     </div>
   </body>
