--- a/index.html
+++ b/index.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <script src="script.js" defer></script>
-    <title>Link CSS to HTML</title>
-  </head>
-  <body>
-    <h1>Odiso's Calculator</h1>
-    <div class="calculator-container">
-      <div class="calculate-container">
-        <div class="equation-contanier"></div>
-        <div class="answer-container">Ans</div>
-      </div>
-      <div class="calcButtons-container">
-        <button class="calc-button" onclick="hoverGrid()">Ac</button>
-        <button class="calc-button" onclick="hoverGrid()">X</button>
-        <button class="calc-button" onclick="hoverGrid()" id="operands-buttons">/</button>
-        <button class="calc-button" onclick="hoverGrid()" id="operands-buttons">*</button>
-        <button class="calc-button" onclick="hoverGrid()">7</button>
-        <button class="calc-button" onclick="hoverGrid()">8</button>
-        <button class="calc-button" onclick="hoverGrid()">9</button>
-        <button class="calc-button" onclick="hoverGrid()" id="operands-buttons">-</button>
-        <button class="calc-button" onclick="hoverGrid()">4</button>
-        <button class="calc-button" onclick="hoverGrid()">5</button>
-        <button class="calc-button" onclick="hoverGrid()">6</button>
-        <button class="calc-button" onclick="hoverGrid()" id="operands-buttons">+</button>
-        <button class="calc-button" onclick="hoverGrid()">1</button>
-        <button class="calc-button" onclick="hoverGrid()">2</button>
-        <button class="calc-button" onclick="hoverGrid()">3</button>
-        <button class="calc-button " id="equals-button">=</button>
-        <button class="calc-button" onclick="hoverGrid()">0</button>
-        <button class="calc-button" onclick="hoverGrid()">.</button>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet" />
+  <script src="script.js" defer></script>
+  <title>Odiso's Calculator</title>
+</head>
+<body>
+  <h1>Odiso's Calculator</h1>
+  <div class="calculator-container">
+    <div class="calculate-container">
+      <div class="equation-container"></div>
+      <div class="answer-container">Ans</div>
     </div>
-  </body>
+    <div class="calcButtons-container">
+      <button class="calc-button">Ac</button>
+      <button class="calc-button">X</button>
+      <button class="calc-button operand-button">/</button>
+      <button class="calc-button operand-button">*</button>
+      <button class="calc-button">7</button>
+      <button class="calc-button">8</button>
+      <button class="calc-button">9</button>
+      <button class="calc-button operand-button">-</button>
+      <button class="calc-button">4</button>
+      <button class="calc-button">5</button>
+      <button class="calc-button">6</button>
+      <button class="calc-button operand-button">+</button>
+      <button class="calc-button">1</button>
+      <button class="calc-button">2</button>
+      <button class="calc-button">3</button>
+      <button class="calc-button equals-button">=</button>
+      <button class="calc-button">0</button>
+      <button class="calc-button">.</button>
+    </div>
+  </div>
+</body>
 </html>
